# neural-network-from-scratch

./: CMakeLists.txt  README.md
src/: main.cpp
src/layers/: activationLayers.cpp  activationLayers.hpp  denseLayer.cpp  denseLayer.hpp  layer.hpp
src/lossFunctions/: lossFunctions.cpp  lossFunctions.hpp
src/mlp/: mlp.cpp  mlp.hpp
src/perceptron/: perceptron.cpp  perceptron.hpp
